# EduCC

./: .gitignore  CMakeLists.txt  Makefile  README.md  c99compiler  educc  sample.c
include/: Compiler.h  EduCC.h
include/ast/: AST.h
include/codegen/: CodeGen.h  CodeGenerator.h
include/ir/: IR.h  IRGenerator.h
include/lexer/: Lexer.h  Token.h
include/optimizer/: Optimizer.h
include/parser/: ASTNodes.h  Parser.h
include/semantic/: Semantic.h  SemanticAnalyzer.h  SymbolTable.h
src/: Compiler.cpp  main.cpp
src/ast/: AST.cpp
src/codegen/: CodeGen.cpp  CodeGenerator.cpp
src/ir/: IR.cpp  IRGenerator.cpp
src/lexer/: Lexer.cpp
src/optimizer/: Optimizer.cpp
src/parser/: ASTNodes.cpp  Parser.cpp
src/semantic/: Semantic.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp
tests/e2e/control_structures/: for_loop.c  for_loop.out
tests/e2e/string_manipulation/: main.c
tests/scripts/: run_e2e_tests.sh
tests/unit/lexer/: Lexer_test.cpp
tests/unit/parser/: Parser_test.cpp
